--- a/Views/Grievance/Records.cshtml
+++ b/Views/Grievance/Records.cshtml
@@ -444,7 +444,7 @@
         var y = document.getElementById("dropDownYearMonth").value;
         var z = $("#RecordsDropdown option:selected").val();
         var a = document.getElementById("ArmyNo").value;
-        window.location.href = "/Grievance/Records?Excel=1&Year=" + x + "&Month=" + y + "&Regt_Record=" + z + "ArmyNo=" + a;
+        window.location.href = "/Grievance/Records?Excel=1&Year=" + x + "&Month=" + y + "&Regt_Record=" + z + "&ArmyNo=" + a;
     }
     function dropDownYear(y) {
         var selectyear = $("#dropDownYear1 option:selected").val();
